Started filling in some bootstrap layout.

--- a/app/app.component.html
+++ b/app/app.component.html
@@ -1,3 +1,10 @@
 <nav class="navbar navbar-default">
-  
+
 </nav>
+<div class="container">
+  <div class="row">
+    <div class="col-md-4">
+      
+    </div>
+  </div>
+</div>
