--- a/app/app.component.html
+++ b/app/app.component.html
@@ -3,8 +3,16 @@
 </nav>
 <div class="container">
   <div class="row">
-    <div class="col-md-4">
-      
+    <div class="col-md-3">
+      <ul class="nav nav-pills nav-stacked">
+        <li role="presentation" routerLink="/players" routerLinkActive="active"><a>Players</a></li>
+        <li role="presentation" routerLinkActive="active"><a>Rounds</a></li>
+        <li role="presentation" routerLinkActive="active"><a>Standings</a></li>
+      </ul>
+    </div>
+
+    <div class="col-md-9">
+      <router-outlet></router-outlet>
     </div>
   </div>
 </div>
