--- a/app/app.component.html
+++ b/app/app.component.html
@@ -3,7 +3,7 @@
 </nav>
 <div class="container">
   <div class="row">
-    <div class="col-md-3">
+    <div class="col-sm-3">
       <ul class="nav nav-pills nav-stacked">
         <li role="presentation" routerLink="/players" routerLinkActive="active"><a>Players</a></li>
         <li role="presentation" routerLinkActive="active"><a>Rounds</a></li>
@@ -11,7 +11,7 @@
       </ul>
     </div>
 
-    <div class="col-md-9">
+    <div class="col-sm-9">
       <router-outlet></router-outlet>
     </div>
   </div>
