#3. Created Player class. Added ability to add players and remove players.

--- a/app/players/players.component.html
+++ b/app/players/players.component.html
@@ -10,7 +10,7 @@
         </div>
         <div class="form-group">
           <div class="col-sm-offset-4 col-sm-2">
-            <button class="btn btn-default">Add Player</button>
+            <button class="btn btn-default" [disabled]="!playerName?.trim()" (click)="addPlayer()">Add Player</button>
           </div>
         </div>
         <hr>
@@ -31,7 +31,10 @@
 
   <div class="col-sm-6">
     <ul class="list-group">
-      <li class="list-group-item">Steven</li>
+      <li *ngFor="let player of players" class="list-group-item">
+        {{player.name}}
+        <button class="close" (click)="deletePlayer(player)">&times;</button>
+      </li>
     </ul>
   </div>
 </div>
