--- a/app/players/players.component.html
+++ b/app/players/players.component.html
@@ -31,7 +31,7 @@
 
   <div class="col-sm-6">
     <ul class="list-group">
-      <li *ngFor="let player of players" class="list-group-item">
+      <li *ngFor="let player of players" class="list-group-item" (click)="selectPlayer(player)">
         {{player.name}}
         <button class="close" (click)="deletePlayer(player)">&times;</button>
       </li>
