--- a/app/players/players.component.html
+++ b/app/players/players.component.html
@@ -5,19 +5,19 @@
         <div class="form-group">
           <label for="player-name" class="col-sm-4 control-label">Name:</label>
           <div class="col-sm-8">
-            <input class="form-control" id="player-name" placeholder="Name" [(ngModel)]="playerName">
+            <input class="form-control" id="player-name" placeholder="Name" [(ngModel)]="selectedPlayer.name">
           </div>
         </div>
         <div class="form-group">
           <div class="col-sm-offset-4 col-sm-2">
-            <button class="btn btn-default" [disabled]="!playerName?.trim()" (click)="addPlayer()">Add Player</button>
+            <button class="btn btn-default" [disabled]="!selectedPlayer.name?.trim()" (click)="savePlayer()">{{editingPlayer ? 'Save' : 'Add'}} Player</button>
           </div>
         </div>
         <hr>
         <div class="form-group">
           <label for="rounds" class="col-sm-4 control-label">Rounds:</label>
           <div class="col-sm-3">
-            <input type="number" class="form-control" id="rounds" [(ngModel)]="numberOfRounds">
+            <input type="number" class="form-control" id="rounds" min="3" [(ngModel)]="numberOfRounds">
           </div>
         </div>
         <div class="form-group">
@@ -30,11 +30,11 @@
   </div>
 
   <div class="col-sm-6">
-    <ul class="list-group">
-      <li *ngFor="let player of players" class="list-group-item" (click)="selectPlayer(player)">
+    <div class="list-group">
+      <a *ngFor="let player of players" class="list-group-item" (click)="selectPlayer(player)">
         {{player.name}}
         <button class="close" (click)="deletePlayer(player)">&times;</button>
-      </li>
-    </ul>
+      </a>
+    </div>
   </div>
 </div>
