#7: Split some code into modules. Created header and footer. Added change log.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,8 @@
+<mm-layout-header></mm-layout-header>
+
+<mm-layout-footer></mm-layout-footer>
+
+<!--
 <nav class="navbar navbar-default">
 
 </nav>
@@ -16,3 +21,4 @@
     </div>
   </div>
 </div>
+-->
