--- a/src/app/shared/layout/header.component.html
+++ b/src/app/shared/layout/header.component.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-default">
   <div class="container">
     <div class="navbar-header">
-      <a href="#" class="navbar-brand">Mirror Match</a>
+      <a class="navbar-brand" routerLink="/">Mirror Match</a>
     </div>
   </div>
 </nav>
