--- a/src/app/swiss/swiss.component.html
+++ b/src/app/swiss/swiss.component.html
@@ -1,7 +1,7 @@
 <div class="swiss-page">
   <div class="container">
     <div class="row">
-      <div class="col-md-3">
+      <div class="col-md-2">
         <ul class="nav nav-pills nav-stacked">
           <li role="presentation" class="active">
             <a href="#">Players</a>
@@ -10,6 +10,10 @@
             <a href="#">Rounds</a>
           </li>
         </ul>
+      </div>
+
+      <div class="col-md-10">
+        <router-outlet></router-outlet>
       </div>
     </div>
   </div>
