--- a/src/app/swiss/swiss-players.component.html
+++ b/src/app/swiss/swiss-players.component.html
@@ -1,32 +1,6 @@
 <div class="row">
   <div class="col-sm-6">
-    <div class="form-horizontal panel panel-default">
-      <div class="panel-body">
-        <div class="form-group">
-          <label for="player-name" class="col-sm-4 control-label">Name:</label>
-          <div class="col-sm-8">
-            <input class="form-control" id="player-name" placeholder="Name" [(ngModel)]="selectedPlayer.name">
-          </div>
-        </div>
-        <div class="form-group">
-          <div class="col-sm-offset-4 col-sm-2">
-            <button class="btn btn-default" [disabled]="!selectedPlayer.name?.trim()" (click)="savePlayer()">{{editingPlayer ? 'Save' : 'Add'}} Player</button>
-          </div>
-        </div>
-        <hr>
-        <div class="form-group">
-          <label for="rounds" class="col-sm-4 control-label">Rounds:</label>
-          <div class="col-sm-3">
-            <input type="number" class="form-control" id="rounds" min="3" [(ngModel)]="numberOfRounds">
-          </div>
-        </div>
-        <div class="form-group">
-          <div class="col-sm-offset-4 col-sm-2">
-            <button class="btn btn-default">Begin Event</button>
-          </div>
-        </div>
-      </div>
-    </div>
+    <mm-swiss-player-form></mm-swiss-player-form>
   </div>
 
   <div class="col-sm-6">
