--- a/src/app/swiss/swiss-players.component.html
+++ b/src/app/swiss/swiss-players.component.html
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="col-sm-6">
-    <mm-swiss-player-form></mm-swiss-player-form>
+    <mm-swiss-player-form [player]="this.selectedPlayer"></mm-swiss-player-form>
   </div>
 
   <div class="col-sm-6">
