#13: Adding app version number to footer.

--- a/src/app/shared/layout/footer.component.html
+++ b/src/app/shared/layout/footer.component.html
@@ -3,6 +3,7 @@
     <p class="text-muted">
       &copy; {{ today | date: 'yyyy' }}.
       Tournament pairings app by Steven Indzeoski.
+      Version {{ version }}.
       Code licensed under MIT.
     </p>
   </div>
