--- a/src/app/swiss/swiss-players.component.html
+++ b/src/app/swiss/swiss-players.component.html
@@ -7,14 +7,6 @@
   </div>
 
   <div class="col-sm-6">
-    <div class="list-group">
-      <a *ngFor="let player of players"
-          class="list-group-item"
-          [ngClass]="{'active': this.selectedPlayer === player}"
-          (click)="selectPlayer(player)">
-        {{player.name}}
-        <button class="close" (click)="deletePlayer(player)">&times;</button>
-      </a>
-    </div>
+    <mm-swiss-player-list (onSelectPlayer)="onSelectPlayer($event)"></mm-swiss-player-list>
   </div>
 </div>
