Issue #11: - Finishing the SwissPlayerListComponent. - Moving logic from SwissPlayerFormComponent to SwissPlayersComponent. - Changing SwissPlayerFormComponent to just emit events. - Adding `noUnused` flags to tsconfig.

--- a/src/app/swiss/swiss-players.component.html
+++ b/src/app/swiss/swiss-players.component.html
@@ -7,6 +7,10 @@
   </div>
 
   <div class="col-sm-6">
-    <mm-swiss-player-list (onSelectPlayer)="onSelectPlayer($event)"></mm-swiss-player-list>
+    <mm-swiss-player-list
+        [selectedPlayer]="this.selectedPlayer"
+        (onDeletePlayer)="onDeletePlayer($event)"
+        (onSelectPlayer)="onSelectPlayer($event)">
+    </mm-swiss-player-list>
   </div>
 </div>
