--- a/src/app/swiss/swiss-players.component.html
+++ b/src/app/swiss/swiss-players.component.html
@@ -4,6 +4,11 @@
         [player]="this.selectedPlayer"
         (onSubmit)="onSubmit($event)">
     </mm-swiss-player-form>
+    <mm-swiss-players-start
+        [numPlayers]=this.players.length
+        [numRounds]=this.numberOfRounds
+        (beginEvent)="onBeginEvent($event)">
+    </mm-swiss-players-start>
   </div>
 
   <div class="col-sm-6">
