#4: - Adding logic to PairingsService. - Making SwissPlayersComponent capable of starting the pairings. - Hid the Pairings pill if pairings haven't started yet.

--- a/src/app/swiss/swiss.component.html
+++ b/src/app/swiss/swiss.component.html
@@ -6,7 +6,7 @@
           <li role="presentation" routerLinkActive="active">
             <a routerLink="/swiss/players">Players</a>
           </li>
-          <li role="presentation" routerLinkActive="active">
+          <li role="presentation" routerLinkActive="active" *ngIf="isPairingsClickable()">
             <a routerLink="/swiss/pairings">Pairings</a>
           </li>
         </ul>
