--- a/src/app/swiss/swiss-players.component.html
+++ b/src/app/swiss/swiss-players.component.html
@@ -6,8 +6,7 @@
     </mm-swiss-player-form>
     <mm-swiss-players-start
         [numPlayers]=this.players.length
-        [numRounds]=this.numberOfRounds
-        (beginEvent)="onBeginEvent($event)">
+        [numRounds]=this.numberOfRounds>
     </mm-swiss-players-start>
   </div>
 
