#4: Turning hasBegunPairings into an Observable. Starting to lock down the Players page when pairings have started.

--- a/src/app/swiss/swiss.component.html
+++ b/src/app/swiss/swiss.component.html
@@ -6,7 +6,7 @@
           <li role="presentation" routerLinkActive="active">
             <a routerLink="/swiss/players">Players</a>
           </li>
-          <li role="presentation" routerLinkActive="active" *ngIf="isPairingsClickable()">
+          <li role="presentation" routerLinkActive="active" *ngIf="isPairingsAvailable">
             <a routerLink="/swiss/pairings">Pairings</a>
           </li>
         </ul>
