--- a/src/app/swiss/swiss-pairings.component.html
+++ b/src/app/swiss/swiss-pairings.component.html
@@ -1,13 +1,13 @@
-<form class="form-horizontal">
+<form class="form-horizontal" [formGroup]="pairingsForm">
   <div class="form-group">
     <label for="selected-round" class="control-label col-sm-2">Round</label>
     <div class="col-sm-2">
-      <select id="selected-round" class="form-control">
+      <select id="selected-round" class="form-control" formControlName="currentRound">
         <option *ngFor="let round of rounds" [value]="round">{{round}}</option>
       </select>
     </div>
     <div class="col-sm-2">
-      <button class="btn btn-default">Generate Pairings</button>
+      <button class="btn btn-default" (click)="generatePairings()">Generate Pairings</button>
     </div>
   </div>
 </form>
