#5: Adding match submission. - Adding saveForRound function to PairingsService. - Creating MatchResultsComponent. - Adding submit events to handle form submission.

--- a/src/app/swiss/pairings-list.component.html
+++ b/src/app/swiss/pairings-list.component.html
@@ -24,4 +24,4 @@
     </table>
   </div>
 </div>
-<mm-match-results [activePairing="this.activePairing"]></mm-match-results>
+<mm-match-results [activePairing]="this.activePairing" (onSubmit)="onSubmit()"></mm-match-results>
