--- a/src/app/swiss/pairings-list.component.html
+++ b/src/app/swiss/pairings-list.component.html
@@ -1,6 +1,17 @@
-<div class="row">
+<div class="row" *ngIf="pairings.length > 0">
   <div class="col-xs-12">
-    <table class="table table-hover" *ngIf="pairings.length > 0">
+    <form class="form-horizontal" [formGroup]="pairingsListForm">
+      <div class="form-group">
+        <div class="col-xs-4">
+          <div class="checkbox">
+            <label>
+              <input type="checkbox" formControlName="showOutstandingOnly"> Show Outstanding Only
+            </label>
+          </div>
+        </div>
+      </div>
+    </form>
+    <table class="table table-hover">
       <thead>
         <tr>
           <th>Table</th>
@@ -11,7 +22,7 @@
         </tr>
       </thead>
       <tbody>
-        <tr *ngFor="let pairing of pairings"
+        <tr *ngFor="let pairing of pairings | outstandingPairings:pairingsListForm.get('showOutstandingOnly').value"
             [ngClass]="{'active': this.activePairing === pairing}"
             (click)="selectPairing(pairing)">
           <td>{{pairing.table}}</td>
