--- a/src/app/swiss/match-results.component.html
+++ b/src/app/swiss/match-results.component.html
@@ -66,7 +66,16 @@
       <div class="col-xs-4">
         <button type="submit"
             class="btn btn-default pull-right"
-            [disabled]="!resultValid">Submit</button>
+            [disabled]="!resultValid">
+          Submit
+        </button>
+      </div>
+      <div class="col-xs-4">
+        <button type="button"
+            class="btn btn-default"
+            (click)="clearMatchResult()">
+          Clear Result
+        </button>
       </div>
     </div>
   </div>
