--- a/src/app/swiss/pairings-list.component.html
+++ b/src/app/swiss/pairings-list.component.html
@@ -35,4 +35,4 @@
     </table>
   </div>
 </div>
-<mm-match-results [activePairing]="this.activePairing" (onSubmit)="onSubmit()"></mm-match-results>
+<mm-match-results [activePairing]="this.activePairing" (onClearResult)="onClearResult()" (onSubmit)="onSubmit()"></mm-match-results>
