#5: Adding Delete Results button. - Fixing return observable in saveForRound.

--- a/src/app/swiss/pairings-list.component.html
+++ b/src/app/swiss/pairings-list.component.html
@@ -9,6 +9,14 @@
             </label>
           </div>
         </div>
+
+        <div class="col-xs-8">
+          <button type="button"
+              class="btn btn-default pull-right"
+              (click)="deleteResults()">
+            Delete Results
+          </button>
+        </div>
       </div>
     </form>
     <table class="table table-hover">
