#5: Adding Redo Matches button. - Fixing a bug in PairingsService that deleted the players array from calling components.

--- a/src/app/swiss/pairings-list.component.html
+++ b/src/app/swiss/pairings-list.component.html
@@ -16,6 +16,12 @@
               (click)="deleteResults()">
             Delete Results
           </button>
+
+          <button type="button"
+              class="btn btn-default pull-right redo-matches"
+              (click)="redoMatches()">
+            Redo Matches
+          </button>
         </div>
       </div>
     </form>
