--- a/src/app/swiss/pairings-list.component.html
+++ b/src/app/swiss/pairings-list.component.html
@@ -2,7 +2,7 @@
   <div class="col-xs-12">
     <form class="form-horizontal" [formGroup]="pairingsListForm">
       <div class="form-group">
-        <div class="col-xs-4">
+        <div class="col-xs-3">
           <div class="checkbox">
             <label>
               <input type="checkbox" formControlName="showOutstandingOnly"> Show Outstanding Only
@@ -10,7 +10,16 @@
           </div>
         </div>
 
-        <div class="col-xs-8">
+        <label for="pairings-search" class="col-xs-1 control-label">Search</label>
+        <div class="col-xs-3">
+          <input type="text"
+              id="pairings-search"
+              class="form-control"
+              placeholder="Player name or table number"
+              formControlName="pairingsSearch">
+        </div>
+
+        <div class="col-xs-5">
           <button type="button"
               class="btn btn-default pull-right"
               (click)="deleteResults()">
@@ -36,7 +45,7 @@
         </tr>
       </thead>
       <tbody>
-        <tr *ngFor="let pairing of pairings | outstandingPairings:pairingsListForm.get('showOutstandingOnly').value"
+        <tr *ngFor="let pairing of filteredPairings"
             [ngClass]="{'active': this.activePairing === pairing}"
             (click)="selectPairing(pairing)">
           <td>{{pairing.table}}</td>
