#18: Created Round and RoundService. - Adding RoundService to AppModule. - Moved some code from PairingService to RoundService.

--- a/src/app/swiss/swiss-players-start.component.html
+++ b/src/app/swiss/swiss-players-start.component.html
@@ -11,7 +11,7 @@
     </div>
     <div class="form-group">
       <div class="col-sm-offset-4 col-sm-2">
-        <button class="btn btn-default">Begin Event</button>
+        <button class="btn btn-default" [disabled]="!canBeginTournement">Begin Event</button>
       </div>
     </div>
   </div>
