#18: Working on PlayerForm and PlayerList. - Updating PlayerForm to disable if tournament has started. - Updating PlayerList to disallow selecting and deleting players if tournament has started.

--- a/src/app/swiss/swiss-player-list.component.html
+++ b/src/app/swiss/swiss-player-list.component.html
@@ -4,6 +4,6 @@
       [ngClass]="{'active': selectedPlayer === player}"
       (click)="selectPlayer(player)">
     {{player.name}}
-    <button class="close" *ngIf="canDeletePlayers" (click)="deletePlayer(player)">&times;</button>
+    <button class="close" *ngIf="!hasBegunTournament" (click)="deletePlayer(player)">&times;</button>
   </a>
 </div>
