--- a/src/app/swiss/swiss-player-form.component.html
+++ b/src/app/swiss/swiss-player-form.component.html
@@ -8,7 +8,7 @@
     </div>
     <div class="form-group">
       <div class="col-sm-offset-4 col-sm-2">
-        <button class="btn btn-default" [disabled]="!swissPlayerForm.valid || isFormDisabled">{{currentPlayer.id ? 'Save' : 'Add'}} Player</button>
+        <button class="btn btn-default" [disabled]="!swissPlayerForm.valid || hasBegunTournament">{{currentPlayer.id ? 'Save' : 'Add'}} Player</button>
       </div>
     </div>
   </div>
