#18: Working on refactoring services. - Fixing display of pairings list. - Fixing Redo Matches button.

--- a/src/app/swiss/pairings-list.component.html
+++ b/src/app/swiss/pairings-list.component.html
@@ -1,4 +1,4 @@
-<div class="row" *ngIf="pairings.length > 0">
+<div class="row" *ngIf="pairingsExist">
   <div class="col-xs-12">
     <form class="form-horizontal" [formGroup]="pairingsListForm">
       <div class="form-group">
