--- a/src/app/swiss/pairings-list.component.html
+++ b/src/app/swiss/pairings-list.component.html
@@ -46,7 +46,7 @@
       </thead>
       <tbody>
         <tr *ngFor="let pairing of filteredPairings"
-            [ngClass]="{'active': this.activePairing === pairing}"
+            [ngClass]="{'active': selectedPairing === pairing}"
             (click)="selectPairing(pairing)">
           <td>{{pairing.table}}</td>
           <td>{{pairing.player1.name}}</td>
@@ -58,4 +58,4 @@
     </table>
   </div>
 </div>
-<mm-match-results [activePairing]="this.activePairing" (onClearResult)="onClearResult()" (onSubmit)="onSubmit()"></mm-match-results>
+<mm-match-results></mm-match-results>
