--- a/src/app/swiss/swiss.component.html
+++ b/src/app/swiss/swiss.component.html
@@ -9,6 +9,9 @@
           <li role="presentation" routerLinkActive="active" *ngIf="hasTournamentBegun">
             <a routerLink="/swiss/pairings">Pairings</a>
           </li>
+          <li role="presentation" routerLinkActive="active">
+            <a routerLink="/swiss/standings">Standings</a>
+          </li>
         </ul>
       </div>
 
