#20: Hopefully making finishing touches on Standings. - Adding tracking of completed rounds. - Adding a guard for the Standings page. - Hiding Standings from the menu when not available yet.

--- a/src/app/swiss/swiss.component.html
+++ b/src/app/swiss/swiss.component.html
@@ -9,7 +9,7 @@
           <li role="presentation" routerLinkActive="active" *ngIf="hasTournamentBegun">
             <a routerLink="/swiss/pairings">Pairings</a>
           </li>
-          <li role="presentation" routerLinkActive="active">
+          <li role="presentation" routerLinkActive="active" *ngIf="hasCompletedRounds">
             <a routerLink="/swiss/standings">Standings</a>
           </li>
         </ul>
