#21: Implementing byes. - Adding bye logic to Pairing model. - Adding bye logic to saving to PairingService. - Adding Observable to RoundService for if the selected round has submitted pairings. - Adding bye logic to standing calculation. - Adding bye logic to pairings table. - Disabling Redo Matches button when the selected round has some submitted pairings.

--- a/src/app/swiss/pairings-list.component.html
+++ b/src/app/swiss/pairings-list.component.html
@@ -28,6 +28,7 @@
 
           <button type="button"
               class="btn btn-default pull-right redo-matches"
+              [disabled]="selectedRoundHasSubmittedPairings"
               (click)="redoMatches()">
             Redo Matches
           </button>
@@ -51,7 +52,7 @@
           <td>{{pairing.table}}</td>
           <td>{{pairing.player1.name}}</td>
           <td>{{resultDisplayString(pairing)}}</td>
-          <td>{{pairing.player2.name}}</td>
+          <td>{{pairing.bye ? '***Bye***' : pairing.player2.name}}</td>
           <td>{{resultDisplayString(pairing, true)}}</td>
         </tr>
       </tbody>
