#22: Have pairings working. Atleast for basic cases. - Adding phase 1 of Irving's algorithm to PairingService. - Adding Observable for canStartNextRound to RoundService. - Adding button to Create Next Round in SwissPairingsComponent.

--- a/src/app/swiss/swiss-pairings.component.html
+++ b/src/app/swiss/swiss-pairings.component.html
@@ -8,6 +8,7 @@
     </div>
     <div class="col-sm-2">
       <button class="btn btn-default" *ngIf="!selectedRoundHasPairings" (click)="generatePairings()">Generate Pairings</button>
+      <button class="btn btn-default" *ngIf="canStartNextRound" (click)="createNextRound()">Create Next Round</button>
     </div>
   </div>
 </form>
