--- a/src/app/swiss/match-results.component.html
+++ b/src/app/swiss/match-results.component.html
@@ -10,7 +10,7 @@
         <div class="input-group">
           <input type="number" class="form-control" id="player1Wins" min="0" max="2" formControlName="player1Wins">
           <span class="input-group-btn">
-            <button type="button" class="btn btn-default" (click)="incrementPlayer1Wins()">
+            <button type="button" class="btn btn-default" (click)="incrementPlayer1Wins()" [disabled]="selectedRoundComplete">
               <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
             </button>
           </span>
@@ -32,7 +32,7 @@
         <div class="input-group">
           <input type="number" class="form-control" id="player2Wins" min="0" max="2" formControlName="player2Wins">
           <span class="input-group-btn">
-            <button type="button" class="btn btn-default" (click)="incrementPlayer2Wins()">
+            <button type="button" class="btn btn-default" (click)="incrementPlayer2Wins()" [disabled]="selectedRoundComplete">
               <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
             </button>
           </span>
@@ -54,7 +54,7 @@
         <div class="input-group">
           <input type="number" class="form-control" id="draws" min="0" max="2" formControlName="draws">
           <span class="input-group-btn">
-            <button type="button" class="btn btn-default" (click)="incrementDraws()">
+            <button type="button" class="btn btn-default" (click)="incrementDraws()" [disabled]="selectedRoundComplete">
               <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
             </button>
           </span>
@@ -66,14 +66,15 @@
       <div class="col-xs-4">
         <button type="submit"
             class="btn btn-default pull-right"
-            [disabled]="!resultValid">
+            [disabled]="!resultValid || selectedRoundComplete">
           Submit
         </button>
       </div>
       <div class="col-xs-4">
         <button type="button"
             class="btn btn-default"
-            (click)="clearMatchResult()">
+            (click)="clearMatchResult()"
+            [disabled]="selectedRoundComplete">
           Clear Result
         </button>
       </div>
