--- a/src/app/swiss/pairings-list.component.html
+++ b/src/app/swiss/pairings-list.component.html
@@ -22,6 +22,7 @@
         <div class="col-xs-5">
           <button type="button"
               class="btn btn-default pull-right"
+              [disabled]="selectedRoundComplete"
               (click)="deleteResults()">
             Delete Results
           </button>
