#16: Fixing the sticky footer.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,9 @@
-<mm-layout-header></mm-layout-header>
+<div class="wrapper">
+  <mm-layout-header></mm-layout-header>
 
-<router-outlet></router-outlet>
-
+  <router-outlet></router-outlet>
+  <div class="push"></div>
+</div>
 <mm-layout-footer></mm-layout-footer>
 
 <!--
