#30: Good start on in-app notifications. - Removing some commented out HTML from AppComponent. - Adding new MessageService. - Send a message about last round being complete from the RoundService. - Adding messages display to SwissComponent.

--- a/src/app/swiss/swiss.component.html
+++ b/src/app/swiss/swiss.component.html
@@ -16,6 +16,9 @@
       </div>
 
       <div class="col-md-10">
+        <div class="alert" [ngClass]="message.type" role="alert" *ngFor="let message of messages">
+          {{message.message}}
+        </div>
         <router-outlet></router-outlet>
       </div>
     </div>
