#31: Adding EventInfoComponent and hooking it up to the router and displaying the blank page for now.

--- a/src/app/swiss/swiss.component.html
+++ b/src/app/swiss/swiss.component.html
@@ -7,6 +7,9 @@
             <a routerLink="/swiss/players">Players</a>
           </li>
           <li role="presentation" routerLinkActive="active" *ngIf="hasTournamentBegun">
+            <a routerLink="/swiss/event">Event Info</a>
+          </li>
+          <li role="presentation" routerLinkActive="active" *ngIf="hasTournamentBegun">
             <a routerLink="/swiss/pairings">Pairings</a>
           </li>
           <li role="presentation" routerLinkActive="active" *ngIf="hasCompletedRounds">
