#31: Adding placeholders for info on the event info page.

--- a/src/app/swiss/event-info.component.html
+++ b/src/app/swiss/event-info.component.html
@@ -1,4 +1,38 @@
 <div class="row">
+  <div class="col-sm-6 col-md-3">
+    <div class="panel panel-default">
+      <div class="panel-heading">
+        <h3 class="panel-title">Rounds</h3>
+      </div>
+
+      <div class="panel-body">
+        <ul class="list-unstyled">
+          <li>Number of rounds:</li>
+          <li>Current round:</li>
+          <li>Completed round:</li>
+          <li>Ongoing matches:</li>
+        </ul>
+      </div>
+    </div>
+  </div>
+
+  <div class="col-sm-6 col-md-3">
+    <div class="panel panel-default">
+      <div class="panel-heading">
+        <h3 class="panel-title">Players</h3>
+      </div>
+
+      <div class="panel-body">
+        <ul class="list-unstyled">
+          <li>Total players:</li>
+          <li>Active players:</li>
+          <li>Dropped players:</li>
+        </ul>
+      </div>
+    </div>
+  </div>
+</div>
+<div class="row">
   <div class="col-xs-12">
     <p>
         <button type="button" class="btn btn-danger" (click)="endEventClicked()">End Event</button>
