#31: Adding stats for Rounds section of Event Info page.

--- a/src/app/swiss/event-info.component.html
+++ b/src/app/swiss/event-info.component.html
@@ -7,10 +7,10 @@
 
       <div class="panel-body">
         <ul class="list-unstyled">
-          <li>Number of rounds:</li>
-          <li>Current round:</li>
-          <li>Completed round:</li>
-          <li>Ongoing matches:</li>
+          <li>Number of rounds: {{numberOfRounds}}</li>
+          <li>Current round: {{currentRound}}</li>
+          <li>Completed round: {{completedRound}}</li>
+          <li>Ongoing matches: {{ongoingMatches}}</li>
         </ul>
       </div>
     </div>
