#31: Adding stats to Players section on Event Info page.

--- a/src/app/swiss/event-info.component.html
+++ b/src/app/swiss/event-info.component.html
@@ -24,9 +24,9 @@
 
       <div class="panel-body">
         <ul class="list-unstyled">
-          <li>Total players:</li>
-          <li>Active players:</li>
-          <li>Dropped players:</li>
+          <li>Total players: {{totalPlayers}}</li>
+          <li>Active players: {{activePlayers}}</li>
+          <li>Dropped players: {{droppedPlayers}}</li>
         </ul>
       </div>
     </div>
