--- a/src/app/swiss/event-info.component.html
+++ b/src/app/swiss/event-info.component.html
@@ -40,7 +40,7 @@
     <div class="alert alert-danger" role="alert" *ngIf="showEndEventConfirmation">
       <p>Ending the event will erase all currently entered data including players, pairings, and results. Are you sure you want to end the event?</p>
       <p>
-        <button type="button" class="btn btn-danger">I'm done with this event</button>
+        <button type="button" class="btn btn-danger" (click)="endEventConfirm()">I'm done with this event</button>
         <button type="button" class="btn btn-default" (click)="cancelEndEvent()">Not yet</button>
       </p>
     </div>
