--- a/src/app/swiss/swiss-player-form.component.html
+++ b/src/app/swiss/swiss-player-form.component.html
@@ -7,11 +7,10 @@
       </div>
     </div>
     <div class="form-group">
-      <div class="col-sm-offset-4 col-sm-3">
+      <div class="col-sm-offset-4 col-sm-8">
         <button type="submit" class="btn btn-default" [disabled]="!swissPlayerForm.valid || hasBegunTournament">{{currentPlayer.id ? 'Save' : 'Add'}} Player</button>
-      </div>
-      <div class="col-sm-3">
         <button type="reset" class="btn btn-default" (click)="reset()" [disabled]="!swissPlayerForm.valid">Cancel</button>
+        <button class="btn btn-default" *ngIf="hasBegunTournament" [disabled]="!currentPlayer.id || currentPlayer.dropped">Drop</button>
       </div>
     </div>
   </div>
