--- a/src/app/swiss/swiss-player-form.component.html
+++ b/src/app/swiss/swiss-player-form.component.html
@@ -10,7 +10,11 @@
       <div class="col-sm-offset-4 col-sm-8">
         <button type="submit" class="btn btn-default" [disabled]="!swissPlayerForm.valid || hasBegunTournament">{{currentPlayer.id ? 'Save' : 'Add'}} Player</button>
         <button type="reset" class="btn btn-default" (click)="reset()" [disabled]="!swissPlayerForm.valid">Cancel</button>
-        <button class="btn btn-default" *ngIf="hasBegunTournament" [disabled]="!currentPlayer.id || currentPlayer.dropped">Drop</button>
+        <button type="button"
+          class="btn btn-default"
+          *ngIf="hasBegunTournament"
+          [disabled]="!currentPlayer.id"
+          (click)="toggleCurrentPlayerDropped()">{{currentPlayer.dropped ? 'Undrop' : 'Drop'}}</button>
       </div>
     </div>
   </div>
