--- a/src/app/swiss/swiss.component.html
+++ b/src/app/swiss/swiss.component.html
@@ -4,7 +4,7 @@
       <div class="col-md-2">
         <ul class="nav nav-pills nav-stacked">
           <li role="presentation" routerLinkActive="active">
-            <a routerLink="/swiss/players">Players <span class="badge" *ngIf="numberOfPlayers > 0">{{numberOfPlayers}}</span></a>
+            <a routerLink="/swiss/players">Players <span class="badge" *ngIf="numberOfActivePlayers > 0">{{numberOfActivePlayers}}</span></a>
           </li>
           <li role="presentation" routerLinkActive="active" *ngIf="hasTournamentBegun">
             <a routerLink="/swiss/event">Event Info</a>
