--- a/src/app/swiss/swiss-player-form.component.html
+++ b/src/app/swiss/swiss-player-form.component.html
@@ -1,21 +1,21 @@
-<form class="form-horizontal panel panel-default" [formGroup]="swissPlayerForm" (ngSubmit)="submit()" novalidate>
+<form class="form-horizontal panel panel-default">
   <div class="panel-body">
     <div class="form-group">
       <label for="player-name" class="col-sm-4 control-label">Name:</label>
       <div class="col-sm-8">
-        <input class="form-control" id="player-name" placeholder="Name" formControlName="name" required>
+        <input class="form-control" [(ngModel)]="editingPlayer.name" id="player-name" placeholder="Name" required>
       </div>
     </div>
     <div class="form-group">
       <div class="col-sm-offset-4 col-sm-8">
-        <button type="submit" class="btn btn-default" [disabled]="!swissPlayerForm.valid">{{currentPlayer.id ? 'Save' : 'Add'}} Player</button>
-        <button type="reset" class="btn btn-default" (click)="reset()" [disabled]="!swissPlayerForm.valid">Cancel</button>
+        <button type="submit" class="btn btn-default" (click)="savePlayer()">{{addMode ? 'Add' : 'Save'}} Player</button>
+        <button type="reset" class="btn btn-default" (click)="clear()">Cancel</button>
         <button type="button"
           class="btn"
-          [ngClass]="{'btn-default': currentPlayer.dropped, 'btn-warning': !currentPlayer.dropped}"
+          [ngClass]="{'btn-default': editingPlayer.dropped, 'btn-warning': !editingPlayer.dropped}"
           *ngIf="hasBegunTournament && !isTournamentOver"
-          [disabled]="!currentPlayer.id"
-          (click)="toggleCurrentPlayerDropped()">{{currentPlayer.dropped ? 'Undrop' : 'Drop'}}</button>
+          [disabled]="!editingPlayer.id"
+          (click)="toggleeditingPlayerDropped()">{{editingPlayer.dropped ? 'Undrop' : 'Drop'}}</button>
       </div>
     </div>
   </div>
