--- a/src/app/swiss/swiss-players-start.component.html
+++ b/src/app/swiss/swiss-players-start.component.html
@@ -1,12 +1,10 @@
 <form class="form-horizontal panel panel-default"
-    [formGroup]="swissPlayersStartForm"
-    (ngSubmit)="onSubmit()"
     novalidate>
   <div class="panel-body">
     <div class="form-group">
       <label for="rounds" class="col-sm-4 control-label">Rounds:</label>
       <div class="col-sm-3">
-        <input type="number" class="form-control" id="rounds" min="3" formControlName="numberOfRounds">
+        <input type="number" class="form-control" id="rounds" min="3" [(ngModel)]="numberOfRounds">
       </div>
     </div>
     <div class="form-group">
