--- a/src/app/swiss/swiss-players.component.html
+++ b/src/app/swiss/swiss-players.component.html
@@ -1,10 +1,10 @@
 <div class="row">
   <div class="col-sm-6">
-    <mm-swiss-player-form></mm-swiss-player-form>
+    <mm-swiss-player-form [player]="selectedPlayer" (add)="addPlayer($event)" (unselect)="unselect()" (update)="updatePlayer($event)"></mm-swiss-player-form>
     <mm-swiss-players-start></mm-swiss-players-start>
   </div>
 
-  <div class="col-sm-6">
-    <mm-swiss-player-list></mm-swiss-player-list>
+  <div class="col-sm-6" *ngIf="players$ | async as players">
+    <mm-swiss-player-list [players]="players" [selectedPlayer]="selectedPlayer" (deleted)="deletePlayer($event)" (selected)="onSelect($event)"></mm-swiss-player-list>
   </div>
 </div>
