--- a/src/app/swiss/swiss-players.component.html
+++ b/src/app/swiss/swiss-players.component.html
@@ -1,7 +1,7 @@
 <div class="row">
   <div class="col-sm-6">
     <mm-swiss-player-form [player]="selectedPlayer" (add)="addPlayer($event)" (unselect)="unselect()" (update)="updatePlayer($event)"></mm-swiss-player-form>
-    <mm-swiss-players-start></mm-swiss-players-start>
+    <mm-swiss-players-start [recommendedNumOfRounds]="recommendedNumOfRounds$ | async" [canBeginTournament]="canBeginTournament$ | async"></mm-swiss-players-start>
   </div>
 
   <div class="col-sm-6" *ngIf="players$ | async as players">
