--- a/src/app/swiss/swiss-pairings.component.html
+++ b/src/app/swiss/swiss-pairings.component.html
@@ -1,14 +1,14 @@
-<form class="form-horizontal" [formGroup]="pairingsForm">
+<form class="form-horizontal">
   <div class="form-group">
     <label for="selected-round" class="control-label col-sm-2">Round</label>
     <div class="col-sm-2">
-      <select id="selected-round" class="form-control" formControlName="currentRound">
-        <option *ngFor="let round of rounds | async" [value]="round">{{round}}</option>
+      <select id="selected-round" class="form-control" [(ngModel)]="selectedRound" (change)="onRoundChange($event.target.value)">
+        <option *ngFor="let round of rounds$ | async" [value]="round">{{round}}</option>
       </select>
     </div>
     <div class="col-sm-2">
-      <button class="btn btn-default" *ngIf="!selectedRoundHasPairings" (click)="generatePairings()">Generate Pairings</button>
-      <button class="btn btn-default" *ngIf="canStartNextRound" (click)="createNextRound()">Create Next Round</button>
+      <button class="btn btn-default" *ngIf="!pairings | async" (click)="createPairings()">Create Pairings</button>
+      <button class="btn btn-default" *ngIf="canStartNextRound$ | async" (click)="createNextRound()">Create Next Round</button>
     </div>
   </div>
 </form>
