--- a/src/app/swiss/swiss-players-start.component.html
+++ b/src/app/swiss/swiss-players-start.component.html
@@ -4,7 +4,7 @@
     <div class="form-group">
       <label for="rounds" class="col-sm-4 control-label">Rounds:</label>
       <div class="col-sm-3">
-        <input type="number" class="form-control" id="rounds" min="3" [(ngModel)]="numberOfRounds">
+        <input type="number" class="form-control" id="rounds" min="3" [(ngModel)]="numberOfRounds" name="number-of-rounds">
       </div>
     </div>
     <div class="form-group">
