--- a/src/app/swiss/swiss-player-form.component.html
+++ b/src/app/swiss/swiss-player-form.component.html
@@ -3,12 +3,12 @@
     <div class="form-group">
       <label for="player-name" class="col-sm-4 control-label">Name:</label>
       <div class="col-sm-8">
-        <input class="form-control" [(ngModel)]="editingPlayer.name" name="player-name" id="player-name" placeholder="Name" required>
+        <input class="form-control" [(ngModel)]="editingPlayer.name" name="player-name" #playerName="ngModel" id="player-name" placeholder="Name" required minlength="1">
       </div>
     </div>
     <div class="form-group">
       <div class="col-sm-offset-4 col-sm-8">
-        <button type="submit" class="btn btn-default" (click)="savePlayer()">{{addMode ? 'Add' : 'Save'}} Player</button>
+        <button type="submit" class="btn btn-default" (click)="savePlayer()" [disabled]="playerName.invalid">{{addMode ? 'Add' : 'Save'}} Player</button>
         <button type="reset" class="btn btn-default" (click)="clear()">Cancel</button>
         <button type="button"
           class="btn"
