--- a/src/app/swiss/swiss-player-form.component.html
+++ b/src/app/swiss/swiss-player-form.component.html
@@ -9,7 +9,7 @@
     <div class="form-group">
       <div class="col-sm-offset-4 col-sm-8">
         <button type="submit" class="btn btn-default" (click)="savePlayer()" [disabled]="playerName.invalid">{{addMode ? 'Add' : 'Save'}} Player</button>
-        <button type="reset" class="btn btn-default" (click)="clear()">Cancel</button>
+        <button type="reset" class="btn btn-default" (click)="clear()" [disabled]="editingPlayer.name.length === 0">Cancel</button>
         <button type="button"
           class="btn"
           [ngClass]="{'btn-default': editingPlayer.dropped, 'btn-warning': !editingPlayer.dropped}"
