--- a/src/app/swiss/swiss-players-start.component.html
+++ b/src/app/swiss/swiss-players-start.component.html
@@ -9,7 +9,7 @@
     </div>
     <div class="form-group">
       <div class="col-sm-offset-4 col-sm-2">
-        <button class="btn btn-default" [disabled]="!canBeginTournament || hasBegunTournament">Begin Event</button>
+        <button class="btn btn-default" (click)="start()" [disabled]="!canBeginTournament || hasBegunTournament">Begin Event</button>
       </div>
     </div>
   </div>
