--- a/src/app/swiss/swiss-pairings.component.html
+++ b/src/app/swiss/swiss-pairings.component.html
@@ -1,15 +1,3 @@
-<form class="form-horizontal">
-  <div class="form-group">
-    <label for="selected-round" class="control-label col-sm-2">Round</label>
-    <div class="col-sm-2">
-      <select id="selected-round" class="form-control" [(ngModel)]="selectedRound" (change)="onRoundChange($event.target.value)">
-        <option *ngFor="let round of rounds$ | async" [value]="round">{{round}}</option>
-      </select>
-    </div>
-    <div class="col-sm-2">
-      <button class="btn btn-default" *ngIf="!pairings | async" (click)="createPairings()">Create Pairings</button>
-      <button class="btn btn-default" *ngIf="canStartNextRound$ | async" (click)="createNextRound()">Create Next Round</button>
-    </div>
-  </div>
-</form>
+<mm-round-selection [rounds]="rounds$ | async" [selectedRound]="selectedRound$ | async"
+    (createPairingsClicked)="createPairings($event)" (selectedRoundChanged)="onSelectedRoundChanged($event)"></mm-round-selection>
 <mm-pairings-list></mm-pairings-list>
