#62: Fixing clear results button.

--- a/src/app/swiss/pairings-list.component.html
+++ b/src/app/swiss/pairings-list.component.html
@@ -60,4 +60,4 @@
     </table>
   </div>
 </div>
-<mm-match-results></mm-match-results>
+<mm-match-results [selectedPairing]="selectedPairing" (clearMatchResultClicked)="clearMatchResult($event)"></mm-match-results>
