--- a/src/app/swiss/pairings-list.component.html
+++ b/src/app/swiss/pairings-list.component.html
@@ -60,4 +60,7 @@
     </table>
   </div>
 </div>
-<mm-match-results [selectedPairing]="selectedPairing" (clearMatchResultClicked)="clearMatchResult($event)"></mm-match-results>
+<mm-match-results [selectedPairing]="selectedPairing"
+  (clearMatchResultClicked)="clearMatchResult($event)"
+  (pairingSubmitted)="onSubmitPairing($event)"
+  (playerChanged)="onPlayerChanged($event)"></mm-match-results>
