#62: Adding back code for when a round is completing.

--- a/src/app/swiss/pairings-list.component.html
+++ b/src/app/swiss/pairings-list.component.html
@@ -61,6 +61,7 @@
   </div>
 </div>
 <mm-match-results [selectedPairing]="selectedPairing"
+  [selectedRoundComplete]="selectedRoundComplete"
   (clearMatchResultClicked)="clearMatchResult($event)"
   (pairingSubmitted)="onSubmitPairing($event)"
   (playerChanged)="onPlayerChanged($event)"></mm-match-results>
