--- a/src/app/swiss/match-results.component.html
+++ b/src/app/swiss/match-results.component.html
@@ -73,8 +73,7 @@
       <div class="col-xs-4">
         <button type="button"
             class="btn btn-default"
-            (click)="clearMatchResult()"
-            [disabled]="selectedRoundComplete">
+            (click)="clearMatchResult()">
           Clear Result
         </button>
       </div>
