--- a/src/app/swiss/swiss-pairings.component.html
+++ b/src/app/swiss/swiss-pairings.component.html
@@ -4,6 +4,7 @@
   [selectedRound]="selectedRound$ | async"
   (clearMatchResultClicked)="clearMatchResult($event)"
   (deleteResultsClicked)="deleteResults($event)"
+  (lastPairingSubmitted)="onLastPairingSubmitted($event)"
   (pairingSubmitted)="onSubmitPairing($event)"
   (playerChanged)="onPlayerChanged($event)"
   (redoMatchesClicked)="redoMatches($event)"></mm-pairings-list>
