--- a/src/app/swiss/swiss-player-form.component.html
+++ b/src/app/swiss/swiss-player-form.component.html
@@ -8,14 +8,14 @@
     </div>
     <div class="form-group">
       <div class="col-sm-offset-4 col-sm-8">
-        <button type="submit" class="btn btn-default" [disabled]="!swissPlayerForm.valid">{{currentPlayer.id ? 'Save' : 'Add'}} Player</button>
+        <button type="submit" class="btn btn-default" [disabled]="!swissPlayerForm.valid">{{addMode ? 'Add' : 'Save'}} Player</button>
         <button type="reset" class="btn btn-default" (click)="reset()" [disabled]="!swissPlayerForm.valid">Cancel</button>
         <button type="button"
           class="btn"
-          [ngClass]="{'btn-default': currentPlayer.dropped, 'btn-warning': !currentPlayer.dropped}"
+          [ngClass]="{'btn-default': !isPlayerDroppable, 'btn-warning': isPlayerDroppable}"
           *ngIf="hasBegunTournament && !isTournamentOver"
-          [disabled]="!currentPlayer.id"
-          (click)="toggleCurrentPlayerDropped()">{{currentPlayer.dropped ? 'Undrop' : 'Drop'}}</button>
+          [disabled]="!selectedPlayer || !selectedPlayer.id"
+          (click)="toggleSelectedPlayerDropped()">{{isPlayerDroppable ? 'Drop' : 'Undrop'}}</button>
       </div>
     </div>
   </div>
