--- a/src/app/swiss/swiss-players.component.html
+++ b/src/app/swiss/swiss-players.component.html
@@ -1,6 +1,10 @@
 <div class="row">
   <div class="col-sm-6">
-    <mm-swiss-player-form [selectedPlayer]="selectedPlayer"></mm-swiss-player-form>
+    <mm-swiss-player-form
+      [selectedPlayer]="selectedPlayer"
+      (addPlayer)="addPlayer($event)"
+      (playerFormReset)="clearSelectedPlayer()"
+      (updatePlayer)="updatePlayer($event)"></mm-swiss-player-form>
     <mm-swiss-players-start></mm-swiss-players-start>
   </div>
 
