#65: Cleaning up subscriptions in SwissPlayerFormComponent.

--- a/src/app/swiss/swiss-players.component.html
+++ b/src/app/swiss/swiss-players.component.html
@@ -1,6 +1,8 @@
 <div class="row">
   <div class="col-sm-6">
     <mm-swiss-player-form
+      [hasBegunTournament]="hasBegunTournament$ | async"
+      [isTournamentOver]="isTournamentOver$ | async"
       [selectedPlayer]="selectedPlayer"
       (addPlayer)="addPlayer($event)"
       (playerFormReset)="clearSelectedPlayer()"
