#65: Fixing player selection event and focusing on name field on selection.

--- a/src/app/swiss/swiss-players.component.html
+++ b/src/app/swiss/swiss-players.component.html
@@ -11,6 +11,6 @@
   </div>
 
   <div class="col-sm-6">
-    <mm-swiss-player-list [selectedPlayer]="selectedPlayer" (playerSelected)="onPlayerSelected()"></mm-swiss-player-list>
+    <mm-swiss-player-list [selectedPlayer]="selectedPlayer" (playerSelected)="onPlayerSelected($event)"></mm-swiss-player-list>
   </div>
 </div>
