--- a/src/app/swiss/swiss-player-form.component.html
+++ b/src/app/swiss/swiss-player-form.component.html
@@ -3,7 +3,7 @@
     <div class="form-group">
       <label for="player-name" class="col-sm-4 control-label">Name:</label>
       <div class="col-sm-8">
-        <input class="form-control" id="player-name" placeholder="Name" formControlName="name" required>
+        <input class="form-control" id="player-name" placeholder="Name" formControlName="name" #name required>
       </div>
     </div>
     <div class="form-group">
