#65: Handling selected player being deleted. - Finishing cleaning up SwissPlayerListComponent.

--- a/src/app/swiss/swiss-players.component.html
+++ b/src/app/swiss/swiss-players.component.html
@@ -15,6 +15,7 @@
       [hasBegunTournament]="hasBegunTournament$ | async"
       [players]="players$ | async"
       [selectedPlayer]="selectedPlayer"
+      (playerDeleted)="onPlayerDeleted($event)"
       (playerSelected)="onPlayerSelected($event)"></mm-swiss-player-list>
   </div>
 </div>
