#66: WIP. Ton of refactoring around the SwissPairingsComponent.

--- a/src/app/swiss/pairings-list.component.html
+++ b/src/app/swiss/pairings-list.component.html
@@ -60,4 +60,4 @@
     </table>
   </div>
 </div>
-<mm-match-results></mm-match-results>
+<mm-match-results [selectedPairing]="selectedPairing"></mm-match-results>
