--- a/src/app/swiss/swiss-pairings.component.html
+++ b/src/app/swiss/swiss-pairings.component.html
@@ -3,13 +3,14 @@
     <label for="selected-round" class="control-label col-sm-2">Round</label>
     <div class="col-sm-2">
       <select id="selected-round" class="form-control" formControlName="currentRound">
-        <option *ngFor="let round of rounds | async" [value]="round">{{round}}</option>
+        <option *ngFor="let round of rounds" [value]="round">{{round}}</option>
       </select>
     </div>
     <div class="col-sm-2">
-      <button class="btn btn-default" *ngIf="!selectedRoundHasPairings" (click)="generatePairings()">Generate Pairings</button>
-      <button class="btn btn-default" *ngIf="canStartNextRound" (click)="createNextRound()">Create Next Round</button>
+      <button class="btn btn-default" *ngIf="!(selectedRoundHasPairings$ | async)" (click)="generatePairings()">Generate Pairings</button>
+      <button class="btn btn-default" *ngIf="canStartNextRound$ | async" (click)="createNextRound()">Create Next Round</button>
     </div>
   </div>
 </form>
-<mm-pairings-list></mm-pairings-list>
+<mm-pairings-list
+  [pairings]="pairings$ | async"></mm-pairings-list>
