#66: WIP: A ton of work on refactoring rounds/pairings.

--- a/src/app/swiss/swiss-pairings.component.html
+++ b/src/app/swiss/swiss-pairings.component.html
@@ -13,4 +13,8 @@
   </div>
 </form>
 <mm-pairings-list
-  [pairings]="pairings$ | async"></mm-pairings-list>
+  [pairings]="pairings$ | async"
+  (matchResultsCleared)="onMatchResultsCleared($event)"
+  (playerDroppedChanged)="onPlayerDroppedChanged($event)"
+  (redoMatchesForRound)="onRedoMatchesForRound($event)"
+  (resultSubmitted)="onResultSubmitted($event)"></mm-pairings-list>
