#66: Fixing mistake with Redo Matches button.

--- a/src/app/swiss/swiss-pairings.component.html
+++ b/src/app/swiss/swiss-pairings.component.html
@@ -16,5 +16,5 @@
   [pairings]="pairings$ | async"
   (matchResultsCleared)="onMatchResultsCleared($event)"
   (playerDroppedChanged)="onPlayerDroppedChanged($event)"
-  (redoMatchesForRound)="onRedoMatchesForRound($event)"
+  (redoMatchesForRound)="onRedoMatchesForRound()"
   (resultSubmitted)="onResultSubmitted($event)"></mm-pairings-list>
