#66: Fixing problems with submitted the final result of a round.

--- a/src/app/swiss/swiss-pairings.component.html
+++ b/src/app/swiss/swiss-pairings.component.html
@@ -14,6 +14,7 @@
 </form>
 <mm-pairings-list
   [pairings]="pairings$ | async"
+  (lastResultSubmitted)="onLastResultSubmitted()"
   (matchResultsCleared)="onMatchResultsCleared($event)"
   (playerDroppedChanged)="onPlayerDroppedChanged($event)"
   (redoMatchesForRound)="onRedoMatchesForRound()"
